--- a/src/styles/coin.css
+++ b/src/styles/coin.css
@@ -19,9 +19,6 @@
   height: 100%;
   display: flex;
   align-items: center;
-}
-
-.coin-image img {
   height: 70%;
 }
 
@@ -61,9 +58,10 @@
 }
 
 .button-link {
+  border: none;
+  border-radius: 0.3rem;
   background-color: #3aafa9;
   color: white;
-  border-radius: 0.3rem;
   padding: 0.8vh 1vw;
   text-decoration: none;
   font-size: 1rem;
