--- a/src/styles/coinPage.css
+++ b/src/styles/coinPage.css
@@ -37,9 +37,6 @@
 
 .coinpage-title {
   padding-bottom: 4vh;
-}
-
-.coinpage-title h1 {
   text-align: center;
   text-transform: uppercase;
   color: #3aafa9;
@@ -50,10 +47,6 @@
 .coinpage-image {
   padding: 0.5rem;
   height: 20%;
-}
-
-.coinpage-image img {
-  height: 100%;
   max-height: 100px;
 }
 
@@ -66,7 +59,7 @@
   height: 55%;
 }
 
-.coinpage-data-row {
+.coinpage-data > div {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
@@ -88,13 +81,11 @@
 }
 
 .coinpage-button {
-  margin-top: 1rem;
-}
-
-.coinpage-button > * {
-  background-color: #3aafa9;
   border-radius: 0.5rem;
+  margin-top: 1rem;
   padding: 1vh 1.3rem;
+  background-color: #3aafa9;
+  border: none;
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
@@ -117,7 +108,7 @@
     border-radius: 0;
   }
 
-  .coinpage-data-row {
+  .coinpage-data > div {
     display: flex;
     justify-content: space-around;
   }
@@ -128,7 +119,7 @@
 }
 
 @media (max-width: 400px) {
-  .coinpage-data-row {
+  .coinpage-data > div {
     display: flex;
     justify-content: space-between;
   }
@@ -145,7 +136,7 @@
 }
 
 @media (max-width: 300px) {
-  .coinpage-data-row {
+  .coinpage-data > div {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
