--- a/src/styles/coin.css
+++ b/src/styles/coin.css
@@ -1,15 +1,3 @@
-.coin-row {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 10vh;
-  color: white;
-  border-bottom: thin solid white;
-  font-size: 1.2rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
 .coin-name {
   font-size: 1.3rem;
   font-weight: bold;
@@ -18,7 +6,11 @@
 .coin-image {
   display: flex;
   align-items: center;
-  height: 70%;
+  height: 3rem;
+}
+
+.coin-image img {
+  height: 100%;
 }
 
 .coin-symbol,
@@ -56,6 +48,10 @@
   color: rgb(85, 252, 85);
 }
 
+.placeholder-item {
+  display: none;
+}
+
 .button-link {
   border: none;
   border-radius: 0.3rem;
@@ -77,44 +73,34 @@
 }
 
 @media (max-width: 1279px) {
-  .coin-row {
-    font-size: 1.1rem;
-  }
-
   .coin-name {
     font-size: 1.2rem;
   }
 }
 
-@media (max-width: 768px) {
-  .coin-row {
-    flex-wrap: wrap;
-    height: 6rem;
-    padding: 0.3rem 0;
-  }
-
-  .coin-image {
-    padding: 0;
-    width: 2rem;
-    height: auto;
-  }
-
-  .coin-row * {
-    margin-left: 0.8rem;
-    margin-right: 0.8rem;
-  }
-
+@media (max-width: 900px) {
   .button-link {
-    font-size: 0.8rem;
+    margin: 0 30% 3rem 30%;
+  }
+
+  .coin-image,
+  .coin-name,
+  .coin-symbol,
+  .coin-price,
+  .coin-change,
+  .coin-market {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .button-link {
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 480px) {
   .coin-name {
-    font-size: 1.1rem;
-  }
-
-  .coin-row {
-    justify-content: space-around;
+    font-size: 1rem;
   }
 }
