--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -64,15 +64,39 @@
   color: white;
 }
 
+.home-coins-data-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-rows: 10vh;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
 @media (max-width: 1279px) {
   .home-page-content {
-    width: 80%;
+    width: 95%;
+  }
+
+  .home-coins-data-grid {
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 900px) {
   .home-page-content {
-    width: 90%;
+    width: 80%;
+  }
+
+  .home-coins-data-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 1rem;
+  }
+
+  .home-coins-data-grid > * {
+    width: 30%;
+    text-align: center;
   }
 
   .home-search {
@@ -104,6 +128,10 @@
 
 
 @media (max-width: 480px) {
+  .home-coins-data-grid {
+    flex-shrink: 1;
+  }
+
   .home-search {
     width: 97%;
   }
@@ -113,12 +141,12 @@
   }
 }
 
-@media (max-width: 200px) {
-  .home-title h1 {
-    font-size: 2rem;
-  }
-
+@media (max-width: 350px) {
   .home-title h1 {
     font-size: 1.8rem;
+  }
+
+  .home-coins-data-grid {
+    font-size: 0.8rem;
   }
 }
